--- a/code/android/MyApplication/app/src/main/res/layout/item_act_list.xml
+++ b/code/android/MyApplication/app/src/main/res/layout/item_act_list.xml
@@ -5,14 +5,13 @@
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-
     <ImageView
         android:id="@+id/image"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:background="@color/colorPrimary" />
+        android:layout_width="80dp"
+        android:layout_height="160dp" />
 
     <TextView
+        android:layout_marginLeft="20dp"
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
